--- a/StudentInformationSystem/Shared/NavMenu.razor
+++ b/StudentInformationSystem/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="classes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Classes
             </NavLink>
         </li>
     </ul>
