--- a/StudentInformationSystem/Pages/Classes.razor
+++ b/StudentInformationSystem/Pages/Classes.razor
@@ -1,8 +1,7 @@
 ﻿@page "/classes"
 
 @using StudentInformationSystem.Data
-@inject WeatherForecastService ForecastService
-
+@inject StudentClassesService StudentService
 
 
 <style>
@@ -11,11 +10,11 @@
         border-collapse: collapse;
     }
 
-    tr{
+    tr {
         border: 1px solid;
-        text-align:center;
-        font-family:Arial;
-        font-size:14px;
+        text-align: center;
+        font-family: Arial;
+        font-size: 14px;
     }
 
     td, th {
@@ -31,62 +30,32 @@
 <table style="width:400px">
     <thead>
         <tr>
-            <th colspan="2"> This Week's Schedule</th>
+            <th colspan="3"> This Week's Schedule</th>
         </tr>
+        @foreach (var student in studentsToDisplay)
+        {
         <tr>
-            <th>Class</th>
-            <th>Schedule</th>
+            <th>Name:@student.Name</th>
+            <th>Class: temp</th>
+            <th>Schedule: temp</th>
+            
         </tr>
+        }
     </thead>
     <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-            </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
     </tbody>
 </table>
 
-
-
-
-@*<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from a service.</p>
-
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-
 @code {
-    private WeatherForecast[] forecasts;
+    public Student[] studentsToDisplay;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        studentsToDisplay = await StudentService.GetStudentsAsync();
     }
-}*@
+}
+
