--- a/StudentInformationSystem/Shared/NavMenu.razor
+++ b/StudentInformationSystem/Shared/NavMenu.razor
@@ -1,9 +1,13 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@inject Data.LoginState loginState;
+
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">StudentInformationSystem</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
+
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
@@ -25,8 +29,13 @@
     </ul>
 </div>
 
+    
+
 @code {
+    
     private bool collapseNavMenu = true;
+
+    public bool isLoggedIn = false;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
